Implemented creation and update of projects, added server side validation

--- a/DreamTeamProj/src/main/webapp/app/styles/pages/dashboard.scss
+++ b/DreamTeamProj/src/main/webapp/app/styles/pages/dashboard.scss
@@ -47,6 +47,9 @@
 
 .project-card__info {
   padding: 20px 15px;
+  height: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .project-card__title {
