Refactored styles, implemented entities, attrs box

--- a/DreamTeamProj/src/main/webapp/app/styles/core.scss
+++ b/DreamTeamProj/src/main/webapp/app/styles/core.scss
@@ -18,197 +18,16 @@ a:visited {
     text-decoration: none;
 }
 
-.pure-menu-selected .pure-menu-link,
-.pure-menu-selected .pure-menu-link:visited {
-    text-decoration: none;
-    color: cadetblue !important ;
-    font-weight: 700 !important;
-}
-
 .header {
     position: absolute;
     width: 100%;
 }
 
 .main {
-    height: 100%;
+    min-height: 100%;
     padding-top: 52px;
-}
-
-.legal-copyright {
-    color: whitesmoke;
-    text-align: right;
-    font-size: 12;
-    margin: 0;
-}
-
-.custom-restricted-width {
-    display: inline-block;
     position: relative;
-    height: 48%;
-}
-
-.pure-menu {
-    padding-top: 5px;
-}
-
-.pure-menu-link {
-    height: 32px;
-}
-
-.pure-menu-link::before {
-    color: cadetblue;
-    font-size: 18px;
-    top: 4px;
-    left: 3px;
-    position: relative;
-}
-.pure-menu-link span {
-    font-family: sans-serif
-}
-
-.oe {
-    flex: auto;
-    display: flex;
-    flex-direction: column;
-    align-content: space-between;
-    /*margin: 5;*/
-    position: relative;
-}
-
-.left-side {
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-content: flex-start;
-    padding: 0;
-    -webkit-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11);
-    -moz-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11);
-    box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11);
-    width: 20em;
-    z-index: 1;
-    border-right: 1px solid #ddd;
-}
-
-.left-side.shrunk {
-    width: 54px;
-}
-
-.shrunk .not-shrunk-only {
-    display: none;
-}
-
-.add-obj-input {
-    margin: 0px;
-}
-
-.project-menu {
-    margin: 0;
-    background-color: cadetblue;
-    display: flex;
-    flex-direction: row;
-    width: 280px;
-}
-
-.user-block {
-    color: #fff;
-    background: cadetblue;
-    font-family: 'Open Sans', Helvetica, sans-serif;
-    font-size: 19px;
-    font-weight: 700;
-}
-
-.add-form {
-    margin: 0 5px;
-}
-
-.add-form input {
-    width: 70%;
-}
-
-.divider {
-    margin: 5px;
-    border: 0;
-    height: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-.attr-count-td {
-    position: relative;
-    display: inline-block;
-}
-
-.obj-name-td {
-    display: inline-block;
-    position: relative;
-    width: 85%;
-}
-
-.objects-tr {
-    position: relative;
-    width: 100%;
-    padding: 3px 0.4em;
-}
-
-.table-header {
-    border-radius: 3px;
-    background-color: cadetblue;
-    padding: 0.4em;
-    color: aliceblue;
-}
-
-.tbody-div {
-    overflow-y: auto;
-    overflow-x: hidden;
-    flex-grow: 1;
-    padding: 0px !important;
-    height: 0;
-    overflow: auto;
-}
-
-.object-container {
-    flex-grow: 1;
     display: flex;
 }
 
-.object-box {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    margin: 0px !important;
-    border-bottom: 0 !important;
-    border-left: 0 !important;
-    border-right: 0 !important;
-    -webkit-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11) !important;
-    -moz-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11) !important;
-    box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11) !important;
-}
-
-.attr-box {
-    border: 0 !important;
-    box-shadow: 1px 1px 15px -2px black !important;
-    background: #fff;
-    position: absolute;
-    width: 20em;
-    height: 250px;
-    left: 20.5em;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    z-index: 100;
-    margin: 0;
-}
-
-.table-attr {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.elem-name-td {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-}
 
