--- a/DreamTeamProj/src/main/webapp/app/templates/document.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/document.html
@@ -22,8 +22,8 @@
                     <!--</ul>-->
                     <!--<form>-->
                         <!--<div class="form-group">-->
-                            <!--<label for="objectName">Название</label>-->
-                            <!--<input type="text" class="form-control" id="objectName" placeholder="Название">-->
+                            <!--<label for="entityName">Название</label>-->
+                            <!--<input type="text" class="form-control" id="entityName" placeholder="Название">-->
                         <!--</div>-->
                     <!--</form>-->
                 <!--</div>-->
@@ -33,3 +33,4 @@
             <!--</div>-->
             <div id="doc-content-frame" source-document></div>
         </div>
+</div>
