--- a/DreamTeamProj/src/main/webapp/app/templates/objects.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/objects.html
@@ -1,5 +1,5 @@
 <div class="object-container" name="objContainer">
-    <div class="gorizont elements-attr-list">
+    <div class="gorizont entities-attr-list">
         <div class="selects panel panel-default">
         <!--<div class="panel-heading">
                 <h3 class="panel-title">Объекты</h3>
