--- a/DreamTeamProj/src/main/webapp/app/styles/forms.scss
+++ b/DreamTeamProj/src/main/webapp/app/styles/forms.scss
@@ -119,3 +119,29 @@ button.ladda-button {
   color: $color-primary;
 }
 
+.form--inline {
+  display: flex;
+
+  .form-control--grow {
+    flex-grow: 1;
+  }
+
+}
+
+.md-button.md-button--inline {
+  background-color: white;
+  transition: box-shadow 0.4s;
+  min-width: 40px;
+  margin: 0;
+  margin-left: 5px;
+
+  &:hover {
+    background-color: white;
+    box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2)
+  }
+}
+
+.md-button--inline--primary {
+  color: $color-primary;
+}
+
