--- a/DreamTeamProj/src/main/webapp/app/styles/panels.scss
+++ b/DreamTeamProj/src/main/webapp/app/styles/panels.scss
@@ -1,5 +1,9 @@
-div.panel {
+div.panel[class^='panel-'] {
   padding: 30px 24px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  border-radius: 0px;
+  border-radius: 0;
+}
+
+div.panel-heading {
+  border-radius: 0;
 }
