--- a/DreamTeamProj/src/main/webapp/app/templates/document-article.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/document-article.html
@@ -32,8 +32,8 @@
         </ul>
         <form>
           <div class="form-group">
-            <label for="objectName">Название</label>
-            <input type="text" class="form-control" id="objectName" placeholder="Название">
+            <label for="entityName">Название</label>
+            <input type="text" class="form-control" id="entityName" placeholder="Название">
           </div>
         </form>
     </div>
