--- a/DreamTeamProj/src/main/webapp/app/templates/header.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/header.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-default" ng-controller="HeaderCtrl">
     <div class="container-fluid">
+
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -8,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">DB</a>
+            <a class="navbar-brand" href="#" ui-sref="dashboard">DB</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
