--- a/DreamTeamProj/src/main/webapp/app/templates/integrity-constraints.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/integrity-constraints.html
@@ -12,7 +12,7 @@
                     <h3 class="panel-title h2">{{tab.listHeadText}}</h3>
                 </div>
                 <div class="panel-body">
-                    <div class="list-group elements-select">
+                    <div class="list-group entities-select">
                         <a ng-repeat="c in tab.constraints" ng-class="{active: c.id == tab.constraint.id}" href="#" ng-click="selectConstraint(c)" class="list-group-item">{{c.name}}</a>
                     </div>
                 </div>
@@ -33,20 +33,20 @@
                     <div class="form-group" ng-show="tab.name === 'attribute'">
                         <div class="btn-group">
                             <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                                {{tab.constraint.object.name ? tab.constraint.object.name : 'Выберите объект'}}
+                                {{tab.constraint.entity.name ? tab.constraint.entity.name : 'Выберите объект'}}
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#" ng-repeat="object in elements" ng-click="selectObject(object)">{{object.name}}</a></li>
+                                <li><a href="#" ng-repeat="entity in entities" ng-click="selectObject(entity)">{{entity.name}}</a></li>
                             </ul>
                         </div>
-                        <div class="btn-group" ng-show="tab.constraint.object">
+                        <div class="btn-group" ng-show="tab.constraint.entity">
                             <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                                {{tab.constraint.object.attr.name ? tab.constraint.object.attr.name : 'Выберите атрибут'}}
+                                {{tab.constraint.entity.attr.name ? tab.constraint.entity.attr.name : 'Выберите атрибут'}}
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#" ng-repeat="attr in getAttrs(tab.constraint.object)" ng-click="selectAttr(attr)">{{attr.name}}</a></li>
+                                <li><a href="#" ng-repeat="attr in getAttrs(tab.constraint.entity)" ng-click="selectAttr(attr)">{{attr.name}}</a></li>
                             </ul>
                         </div>
                         <button type="button" class="btn btn-default btn-small button-delete-constraint">
@@ -60,7 +60,7 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#" ng-repeat="object in elements" ng-click="selectFirstObject(object)">{{object.name}}</a></li>
+                                <li><a href="#" ng-repeat="entity in entities" ng-click="selectFirstObject(entity)">{{entity.name}}</a></li>
                             </ul>
                         </div>
                         <div class="btn-group" ng-show="tab.constraint.firstObject">
@@ -69,7 +69,7 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#" ng-repeat="object in elements" ng-click="selectSecondObject(object)">{{object.name}}</a></li>
+                                <li><a href="#" ng-repeat="entity in entities" ng-click="selectSecondObject(entity)">{{entity.name}}</a></li>
                             </ul>
                         </div>
                         <button type="button" class="btn btn-default btn-small button-delete-constraint">
