--- a/DreamTeamProj/src/main/webapp/app/styles/document.scss
+++ b/DreamTeamProj/src/main/webapp/app/styles/document.scss
@@ -1,59 +1,4 @@
-#doc-content-frame {
+.pdf-viewer {
     flex-grow: 1;
-    width: 100%;
     border: 0;
-    background-color: #ecf0f1;
-    padding: 10px;
-    overflow-y: auto;
-}
-.jdoc-page {
-    background-color: white;
-    margin: auto;
-    -webkit-box-shadow: 0px 0px 35px -8px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 35px -8px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 35px -8px rgba(0, 0, 0, 0.75);
-}
-.article-add-box {
-    box-shadow: 0px 4px 16px 1px rgba(0,0,0,0.11) !important;
-    /*margin: 10px 0px;*/
-    margin: 0px;
-    /*width: 794px;*/
-    text-indent: 0px;
-    z-index: 1;
-    width: 350px;
-    display: flex;
-    flex-direction: column;
-    border-left: 0 !important;
-    border-top: 0 !important;
-}
-.article-add-box .panel-body {
-    flex-grow: 1;
-}
-document-word {
-    display: inline;
-    cursor: pointer;
-}
-document-word:hover {
-    background-color: #ecf0f1;
-}
-.added-words {
-    padding: 8px;
-}
-.added-word {
-    margin-right: 5px;
-    background-color: cadetblue;
-    color: white;
-    padding: 2px 8px;
-    border-radius: 2px;
-    cursor: pointer;
-    line-height: 25px;
-}
-.add-type {
-    margin-bottom: 20px;
-}
-.document-grid-container {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-    flex-grow: 1;
 }
