--- a/DreamTeamProj/src/main/webapp/app/templates/document.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/document.html
@@ -1,5 +1,5 @@
 <div ng-class="tile" class="panel panel-default tile-doc" ng-controller="DocumentCtrl">
-    <iframe class="pdf-viewer" src="/pdfjs/web/viewer.html"></iframe>
+    <iframe document-viewer class="pdf-viewer" src="/pdfjs/web/viewer.html"></iframe>
     <!--<div class="panel-body doc-content">-->
         <!--<div class="document-grid-container">-->
             <!--<div class="panel panel-default article-add-box" ng-controller="DocumentArticleCtrl">-->
