--- a/DreamTeamProj/src/main/webapp/app/templates/header.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/header.html
@@ -16,6 +16,28 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="#">О проекте</a></li>
+                <li class="dropdown" ng-show="$state.includes('project')">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <span class="">Documents</span>
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li ng-repeat="document in baseProject.documents">
+                            <a href="#" ng-click="">
+                                <i class="fa fa-file-text-o"></i>
+                                {{document.name}}
+                            </a>
+                        </li>
+                        <li role="separator" class="divider"></li>
+                        <li>
+                            <a href="#" ngf-select="addDocument()" ng-model="document" name="document"
+                                    ngf-max-size="100MB">
+                                <i class="fa fa-plus"></i>
+                                Add document
+                            </a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
 
